Closed Bug 417329 Opened 15 years ago Closed 15 years ago

No longer creating accessibles for the Thunderbird Addressing Widget, effective January 22, 2008.

Categories

(Core :: Disability Access APIs, defect)

x86
Windows Vista
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: MarcoZ, Assigned: evan.yan)

Details

(Keywords: access, regression)

Attachments

(1 file)

1.66 KB, patch
ginnchen+exoracle
: review+
mtschrep
: approval1.9+
Details | Diff | Splinter Review
I only caught this now since I started using new Thunderbird builds again. We're no longer creating accessibles for the Addressing widget in the Message Composition window in Thunderbird. The combobox and its items aren't read at all, and the label for the edit field for the address is missing the label.

STR:
1. Start Thunderbird.
2. Hit CTRL+N.
3. You land in the To: address textbox.
Expected: Your favorite screen reader should say "To: edit" or something similar.
Actual: Only "edit" is spoken.

4. Shift+TAB once to select a different address label.
Result: No speech at all.
Expected: It should be announced that you're now in a combobox and that "To:" is selected.

The first build this occurred in is version 3.0a1pre (2008012203). The regression range is http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-01-21+01:00&maxdate=2008-01-22+05:00&cvsroot=/cvsroot
The hierarchy is not correct.

This is what I see:
list
  list item
    unknown (????)
      lable "To:"
      menu "To:"
        ...
    autocomplete (labelled by "unknown")
      push button
      entry

The correct one is:
list
  list item
    combo box (label for "autocomplete")
      menu "To:"
        ...
    autocomplete "To:" (labelled by "combobox")
      entry "To:"

I believe it's related to bug 395699.

Thanks Ginn.

-> Evan
Assignee: aaronleventhal → Evan.Yan
Attached patch patchSplinter Review
Attachment #304002 - Flags: review?(ginn.chen)
Comment on attachment 304002 [details] [diff] [review]
patch

Please add a "space" before
       (isHTML && nsAccUtils::HasListener(content, NS_LITERAL_STRING("click"))) ||
Attachment #304002 - Flags: review?(ginn.chen) → review+
Attachment #304002 - Flags: review+
Attachment #304002 - Flags: review+
Attachment #304002 - Flags: approval1.9?
Attachment #304002 - Flags: approval1.9? → approval1.9+
Checking in src/base/nsAccessibilityService.cpp;
/cvsroot/mozilla/accessible/src/base/nsAccessibilityService.cpp,v  <--  nsAccessibilityService.cpp
new revision: 1.271; previous revision: 1.270
done
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Verified using version 3.0a1pre (2008022003)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.