Bug 417329 - No longer creating accessibles for the Thunderbird Addressing Widget, effective January 22, 2008. r=ginn.chen a=mtschrep